# DetectorFiguras

./: CMakeLists.txt  README.md
include/: canny_manual.h  clasificador.h  contornos.h  convolucion.h  douglas_peucker.h  graham_scan.h  morfologia.h
src/: canny_manual.cpp  clasificador.cpp  contornos.cpp  convolucion.cpp  douglas_peucker.cpp  graham_scan.cpp  main.cpp  morfologia.cpp
